src/test/errors/postconditionError.hhl
/*
    A simple test case for errors caused by a postcondition which may not hold.
    Output:
        Verification failed
        After stripping 0 quantifier(s):
        [Method] The following post condition might not hold:
        exists <_s: State> :: ((<_s>) && ((_s[out]) == (0)))
*/

method postconditionError() returns (out: Int)
requires exists <_s> :: true
ensures exists <_s> :: _s[out] == 0
{
    out := 1
}
